--- a/admin-service/src/main/resources/application.yaml
+++ b/admin-service/src/main/resources/application.yaml
@@ -1,5 +1,7 @@
 server:
   port: 8083
+  servlet:
+    context-path: /admin # 访问本服务所有的请求都要加上/admin前缀（用于gateway断言）
 
 spring:
   datasource:
@@ -7,9 +9,16 @@ spring:
     url: jdbc:mysql://localhost:3306/gpms?characterEncoding=utf8&useUnicode=true&useSSL=false&serverTimezone=Asia/Shanghai
     username: root
     password: root
+  application:
+    name: admin-service
+  cloud:
+    nacos:
+      server-addr: localhost:8848
 
 mybatis:
   type-aliases-package: com.wt.gpms.admin.pojo
   mapper-locations: classpath:mapper/*.xml
   configuration:
     map-underscore-to-camel-case: true #开启驼峰命名转换
+
+
