--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -10,7 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.wt.gpms</groupId>
-    <artifactId>teacher-service</artifactId>
+    <artifactId>gateway</artifactId>
 
     <properties>
         <maven.compiler.source>15</maven.compiler.source>
@@ -18,20 +18,14 @@
     </properties>
 
     <dependencies>
-        <!--webmvc-->
+        <!--spring cloud gateway-->
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-
-        <!--操作数据库-->
-        <dependency>
-            <groupId>org.mybatis.spring.boot</groupId>
-            <artifactId>mybatis-spring-boot-starter</artifactId>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-gateway</artifactId>
         </dependency>
         <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-loadbalancer</artifactId>
         </dependency>
 
         <!--服务注册与发现nacos-->
