--- a/pom.xml
+++ b/pom.xml
@@ -7,10 +7,12 @@
     <groupId>com.wt</groupId>
     <artifactId>gpms</artifactId>
     <version>1.0</version>
+
     <modules>
         <module>student-service</module>
         <module>teacher-service</module>
         <module>admin-service</module>
+        <module>gateway</module>
     </modules>
 
     <properties>
@@ -28,8 +30,8 @@
     </parent>
 
     <dependencyManagement>
-        <!--操作数据库-->
         <dependencies>
+            <!--操作数据库-->
             <dependency>
                 <groupId>org.mybatis.spring.boot</groupId>
                 <artifactId>mybatis-spring-boot-starter</artifactId>
@@ -39,6 +41,24 @@
                 <groupId>mysql</groupId>
                 <artifactId>mysql-connector-java</artifactId>
                 <version>8.0.27</version>
+            </dependency>
+
+            <!-- springCloud -->
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>2021.0.1</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+
+            <!--springCloud Alibaba的依赖管理-->
+            <dependency>
+                <groupId>com.alibaba.cloud</groupId>
+                <artifactId>spring-cloud-alibaba-dependencies</artifactId>
+                <version>2021.0.1.0</version>
+                <type>pom</type>
+                <scope>import</scope>
             </dependency>
         </dependencies>
     </dependencyManagement>
