--- a/admin-service/src/main/resources/application.yaml
+++ b/admin-service/src/main/resources/application.yaml
@@ -14,11 +14,14 @@ spring:
   cloud:
     nacos:
       server-addr: localhost:8848
+  thymeleaf:
+    cache: false
 
 mybatis:
   type-aliases-package: com.wt.gpms.admin.pojo
   mapper-locations: classpath:mapper/*.xml
   configuration:
     map-underscore-to-camel-case: true #开启驼峰命名转换
+
 
 
