--- a/student-service/src/main/resources/application.yaml
+++ b/student-service/src/main/resources/application.yaml
@@ -14,6 +14,11 @@ spring:
   cloud:
     nacos:
       server-addr: localhost:8848
+  servlet:
+    multipart:
+      max-file-size: 50MB
+      max-request-size: 500MB
+
 
 mybatis:
   type-aliases-package: com.wt.gpms.student.pojo
