--- a/admin-service/src/main/resources/application.yaml
+++ b/admin-service/src/main/resources/application.yaml
@@ -4,6 +4,7 @@ server:
     context-path: /admin # 访问本服务所有的请求都要加上/admin前缀（用于gateway断言）
     session:
       tracking-modes: COOKIE
+      timeout: 86400
 
 spring:
   datasource:
