--- a/student-service/src/main/resources/application.yaml
+++ b/student-service/src/main/resources/application.yaml
@@ -2,6 +2,9 @@ server:
   port: 8081
   servlet:
     context-path: /student # 访问本服务所有的请求都要加上/student前缀（用于gateway断言）
+    session:
+      tracking-modes: COOKIE
+      timeout: 86400
 
 spring:
   datasource:
